--- a/JamiyahMadrash/JamiyahMadrash.csproj
+++ b/JamiyahMadrash/JamiyahMadrash.csproj
@@ -46,6 +46,12 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.7\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
@@ -53,6 +59,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -146,6 +154,93 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\BoardExamination.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Category.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Company.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\CompanyForm.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\CompanyModule.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Department.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Forms.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Gender.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ImageFile.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\JAMIYAHMADRASHA.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>JAMIYAHMADRASHA.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\JAMIYAHMADRASHA.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\JAMIYAHMADRASHA.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>JAMIYAHMADRASHA.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Modules.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\MonthlyTutionFee.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\ResidentType.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\SessionMonth.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\SessionYear.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\StaffList.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\StudentAssigned.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\StudentAttachFile.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\StudentInfo.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\StudentInfoPreviousInstitution.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Subject.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\TutionFeeType.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\Usergroup.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UserGroupForm.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\UserGroupModule.cs">
+      <DependentUpon>JAMIYAHMADRASHA.tt</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -168,10 +263,27 @@
     <Content Include="img\portfolio\thumbnails\4.jpg" />
     <Content Include="img\portfolio\thumbnails\5.jpg" />
     <Content Include="img\portfolio\thumbnails\6.jpg" />
+    <Content Include="Models\JAMIYAHMADRASHA.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>JAMIYAHMADRASHA.Context.cs</LastGenOutput>
+      <DependentUpon>JAMIYAHMADRASHA.edmx</DependentUpon>
+    </Content>
+    <Content Include="Models\JAMIYAHMADRASHA.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>JAMIYAHMADRASHA.edmx</DependentUpon>
+      <LastGenOutput>JAMIYAHMADRASHA.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <EntityDeploy Include="Models\JAMIYAHMADRASHA.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>JAMIYAHMADRASHA.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\JAMIYAHMADRASHA.edmx.diagram">
+      <DependentUpon>JAMIYAHMADRASHA.edmx</DependentUpon>
     </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -258,7 +370,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -272,6 +383,9 @@
   <ItemGroup>
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
